// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/PostFlagIcon should match snapshot 1`] = `
<OverlayTrigger
  className="hidden-xs"
  defaultOverlayShown={false}
  delayShow={400}
  key="flagtooltipkey"
  overlay={
    <Tooltip
      bsClass="tooltip"
      className="hidden-xs"
      id="flagTooltip"
      placement="right"
    >
      <FormattedMessage
        defaultMessage="Flag for follow up"
        id="flag_post.flag"
        values={Object {}}
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <button
    aria-label="flag for follow up"
    className="post-menu__item "
    id="CENTER_flagIcon_post_id"
    onClick={[Function]}
  >
    <FlagIcon
      className="icon icon--small"
    />
  </button>
</OverlayTrigger>
`;

exports[`components/post_view/PostFlagIcon should match snapshot 2`] = `
<OverlayTrigger
  className="hidden-xs"
  defaultOverlayShown={false}
  delayShow={400}
  key="flagtooltipkeyvisible"
  overlay={
    <Tooltip
      bsClass="tooltip"
      className="hidden-xs"
      id="flagTooltip"
      placement="right"
    >
      <FormattedMessage
        defaultMessage="Unflag"
        id="flag_post.unflag"
        values={Object {}}
      />
    </Tooltip>
  }
  placement="top"
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <button
    aria-label="unflag"
    className="post-menu__item visible"
    id="CENTER_flagIcon_post_id"
    onClick={[Function]}
  >
    <FlagIconFilled
      className="icon icon--small icon--small-filled"
    />
  </button>
</OverlayTrigger>
`;
